@@ -8,4 +8,4 @@ template <typename T> void foo(T &arg) { // { dg-error "redefinition" }
   arg+=2;
 }
 
-template void foo(float &arg);
+template void foo(float &arg); // { dg-bogus "" "" { xfail *-*-* } }
