@@ -1,3 +1,9 @@
+2006-01-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/25855
+	* g++.dg/template/spec29.C: New test.
+	* g++.dg/template/crash39.C: Tweak error markers.
+
 2006-01-26  Laurent GUERBY <laurent@guerby.net>
 
         PR ada/21317
