@@ -1,3 +1,9 @@
+2006-01-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/25855
+	* pt.c (most_speialized_instantiation): When a tie occurs, set the
+	current presumed champion to the next template.
+
 2006-01-24  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/25552
